re init project

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "LoginAD": false,
-  "Domain": "ALCON",
   "AppSettings": {
-    "Token": "very very secret key"
+    "Token": "secret key for jwt authentication"
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=CORE_FW;Trusted_Connection=True;"
+    "DbConnection": "Server=localhost;Database=CoreFw;Trusted_Connection=True;"
   },
 
   "Logging": {
