--- a/CORE.API.csproj
+++ b/CORE.API.csproj
@@ -1,18 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0"/>
-    <PackageReference Include="FluentValidation" Version="8.6.1"/>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1"/>
-    <PackageReference Include="Stimulsoft.Reports.Web.NetCore" Version="2020.2.1"/>
-    <PackageReference Include="System.DirectoryServices" Version="4.5.0"/>
-    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="4.5.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="FluentValidation" Version="8.6.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 </Project>
+
+<!-- 
+<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+<PackageReference Include="Stimulsoft.Reports.Web.NetCore" Version="2020.2.1" />
+<PackageReference Include="System.DirectoryServices" Version="4.5.0" />
+<PackageReference Include="System.DirectoryServices.AccountManagement" Version="4.5.0" /> -->
