add auth controller and jwt security

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "secret key for jwt authentication"
+    "Token": "very secret key for jwt authentication"
   },
   "ConnectionStrings": {
     "DbConnection": "Server=localhost;Database=CoreFw;Trusted_Connection=True;"
